<resources>
    <string name="app_name">Media Network</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2016</string>
    <string name="app_copyright">mnetwork.ifsoft.ru</string>
    <string name="app_email">support@ifsoft.ru</string>
    <string name="app_site">http://mnetwork.ifsoft.ru</string>
    <string name="facebook_app_id">456546456456</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_share_text">Download App: https://play.google.com/store/apps/details?id=ru.ifsoft.mnetwork</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_view">View</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_all">Delete all</string>
    <string name="action_clear">Clear</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_post">Post</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="action_share">Share</string>
    <string name="action_grant">Grant</string>
    <string name="action_new">New Item</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit_cover">Edit cover</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_sex_undefined">Gender Not Set</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="placeholder_auth">Username or Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_phone">Phone number, example: +15417543010</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_new_gallery_item_description">Description for item</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_item_posted">Item has been posted successfully.</string>
    <string name="msg_item_saved">Item has been saved successfully.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_comments_disabled">The user does not want to comment on his Items.</string>
    <string name="msg_post_has_been_already_shared">You have already shared this Item.</string>
    <string name="msg_account_deactivate">You can restore your account later by authorization via login and password. \n\n All your Items will be permanently deleted.</string>
    <string name="msg_location_permission_request">Please grant permissions to use your location.</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 3 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this mail is already registered</string>
    <string name="error_phone_taken">User with this phone number is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">Email invalid.</string>
    <string name="label_gcm_comment">You have a new comment.</string>
    <string name="label_gcm_message">You have a new message.</string>
    <string name="label_gcm_comment_reply">You have a new reply to comment.</string>
    <string name="label_authorization_via_facebook">Authorization via Facebook.</string>
    <string name="label_account_connected_to_facebook">Connected with Facebook</string>
    <string name="label_account_connect_to_facebook">Connect this account with your social network accounts</string>
    <string name="label_empty_list">List is empty.</string>
    <string name="label_post_share">Share Item</string>
    <string name="label_block">Block</string>
    <string name="label_block_msg">will not be able write comments to your Items and send your messages, and you will not see notifications from</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_msg">Do you want to delete this Item?</string>
    <string name="label_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="label_logout_msg">Are you sure you want to Logout?</string>
    <string name="label_post_report_title">Abuse report</string>
    <string name="label_last_message_image">Image</string>
    <string name="label_you_havent_items">You haven\'t items.</string>
    <string name="label_user_havent_items">This user has no items.</string>
    <string name="label_select_img">Select image</string>
    <string name="label_delete_img">Delete image?</string>
    <string name="label_account_disabled">Account blocked</string>
    <string name="label_search_start_screen_msg">Find items by title or/and content.</string>
    <string name="label_search_results">Found items:</string>
    <string name="label_search_results_error">No results found</string>
    <string name="label_comment_added">added a new comment.</string>
    <string name="label_comment_reply_added">replied to your comment.</string>
    <string name="label_likes_item">likes your item.</string>
    <string name="label_post_to_dialog_title">Share With</string>
    <string name="label_post_location">Location:</string>
    <string name="settings_allow_messages">Receive messages</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user.</string>
    <string name="settings_allow_comments">Allow comments</string>
    <string name="settings_allow_comments_summary">You allow comments in items.</string>
    <string name="settings_allow_profile_info_only_for_friends">Profile Information</string>
    <string name="settings_allow_profile_info_only_for_friends_summary">Only friends can see the information in my profile.</string>
    <string name="settings_allow_show_online">Online</string>
    <string name="settings_allow_show_online_summary">Show when I\'m online.</string>
    <string name="settings_allow_show_phone">Phone number</string>
    <string name="settings_allow_show_phone_summary">Show my phone number.</string>
</resources>